--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -5,13 +5,19 @@
 
     >
 
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:id="@+id/album_image"
+        android:contentDescription="@string/album_icon"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/album_name"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="10dp"
-        android:textSize="16pt"
+        android:textSize="12pt"
         android:textColor="@color/black"/>
 
 </LinearLayout>
